RESOLVED FIXED224252
Fix logic error in MediaMetadataInit
https://bugs.webkit.org/show_bug.cgi?id=224252
Summary Fix logic error in MediaMetadataInit
Jean-Yves Avenard [:jya]
Reported 2021-04-06 16:55:55 PDT
Fix logic error in MediaMetadataInit
Attachments
Patch (1.35 KB, patch)
2021-04-06 17:09 PDT, Jean-Yves Avenard [:jya]
no flags
Radar WebKit Bug Importer
Comment 1 2021-04-06 16:56:53 PDT
Jean-Yves Avenard [:jya]
Comment 2 2021-04-06 17:09:35 PDT
EWS
Comment 3 2021-04-06 17:12:23 PDT
EWS
Comment 4 2021-04-06 18:32:20 PDT
Committed r275584: <https://commits.webkit.org/r275584> All reviewed patches have been landed. Closing bug and clearing flags on attachment 425337 [details].
Note You need to log in before you can comment on or make changes to this bug.