Fix logic error in MediaMetadataInit https://bugs.webkit.org/show_bug.cgi?id=224252 <rdar://problem/76291386>

Reviewed by Eric Carlson.

Fix inverted logic error in decode that would have caused it to return early.

* Modules/mediasession/MediaMetadataInit.h:
(WebCore::MediaMetadataInit::decode):


Canonical link: https://commits.webkit.org/236230@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@275584 268f45cc-cd09-0410-ab3c-d52691b4dbfc